--- a/tests/test_cases/2008/commands/7C0.7C8.2129.yaml
+++ b/tests/test_cases/2008/commands/7C0.7C8.2129.yaml
@@ -2,16 +2,21 @@ command_id: 7C0.7C8.2129
 test_cases:
 - expected_values:
     TOYOTA_FLI_VOL: 14.53104
+    TOYOTA_FUEL_INPUT: 110
   response: 7C80361296E
 - expected_values:
     TOYOTA_FLI_VOL: 14.92734
+    TOYOTA_FUEL_INPUT: 113
   response: 7C803612971
 - expected_values:
     TOYOTA_FLI_VOL: 15.05945
+    TOYOTA_FUEL_INPUT: 114
   response: 7C803612972
 - expected_values:
     TOYOTA_FLI_VOL: 16.77675
+    TOYOTA_FUEL_INPUT: 127
   response: 7C80361297F
 - expected_values:
     TOYOTA_FLI_VOL: 17.30515
+    TOYOTA_FUEL_INPUT: 131
   response: 7C803612983
