--- a/tests/test_cases/2012/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2012/commands/7B0.7B8.2147.yaml
@@ -3,12 +3,16 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: 34.5
     TOYOTA_STEER_ANGLE: 34.5
+    TOYOTA_YAW: 1
     TOYOTA_YAW_RATE: 1
   response: 7B80761470000818159
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: 34.5
     TOYOTA_STEER_ANGLE: 34.5
+    TOYOTA_YAW: 2
     TOYOTA_YAW_RATE: 2
   response: 7B80761470000828159
