--- a/tests/test_cases/2018/commands/750.758.2116|t=96,e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2116|t=96,e=2A,ta=2A,fc=1.yaml
@@ -1,107 +1,107 @@
 command_id: 750.758.2116|t=96,e=2A,ta=2A,fc=1
 test_cases:
 - expected_values:
-    TOYOTA_TT_FL_V2: 3
-    TOYOTA_TT_FR_V2: 3
-    TOYOTA_TT_RL_V2: 3
-    TOYOTA_TT_RR_V2: 2
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 3
+    TOYOTA_TIRE_T_FR: 3
+    TOYOTA_TIRE_T_RL: 3
+    TOYOTA_TIRE_T_RR: 2
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A100761162B2B2B
     7582A212AFF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 3
-    TOYOTA_TT_FR_V2: 215
-    TOYOTA_TT_RL_V2: 215
-    TOYOTA_TT_RR_V2: 215
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 3
+    TOYOTA_TIRE_T_FR: 215
+    TOYOTA_TIRE_T_RL: 215
+    TOYOTA_TIRE_T_RR: 215
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A100761162BFFFF
     7582A21FFFF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 24
-    TOYOTA_TT_FR_V2: 24
-    TOYOTA_TT_RL_V2: 25
-    TOYOTA_TT_RR_V2: 24
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 24
+    TOYOTA_TIRE_T_FR: 24
+    TOYOTA_TIRE_T_RL: 25
+    TOYOTA_TIRE_T_RR: 24
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116404041
     7582A2140FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 28
-    TOYOTA_TT_FR_V2: 28
-    TOYOTA_TT_RL_V2: 29
-    TOYOTA_TT_RR_V2: 28
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 28
+    TOYOTA_TIRE_T_FR: 28
+    TOYOTA_TIRE_T_RL: 29
+    TOYOTA_TIRE_T_RR: 28
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116444445
     7502A300001
     7582A2144FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 28
-    TOYOTA_TT_FR_V2: 28
-    TOYOTA_TT_RL_V2: 29
-    TOYOTA_TT_RR_V2: 28
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 28
+    TOYOTA_TIRE_T_FR: 28
+    TOYOTA_TIRE_T_RL: 29
+    TOYOTA_TIRE_T_RR: 28
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116444445
     7582A2144FF00000000
     7502A300001
 - expected_values:
-    TOYOTA_TT_FL_V2: 28
-    TOYOTA_TT_FR_V2: 215
-    TOYOTA_TT_RL_V2: 29
-    TOYOTA_TT_RR_V2: 28
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 28
+    TOYOTA_TIRE_T_FR: 215
+    TOYOTA_TIRE_T_RL: 29
+    TOYOTA_TIRE_T_RR: 28
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A1007611644FF45
     7502A300001
     7582A2144FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 215
-    TOYOTA_TT_FR_V2: 215
-    TOYOTA_TT_RL_V2: 215
-    TOYOTA_TT_RR_V2: -2
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 215
+    TOYOTA_TIRE_T_FR: 215
+    TOYOTA_TIRE_T_RL: 215
+    TOYOTA_TIRE_T_RR: -2
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116FFFFFF
     7582A2126FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 10
-    TOYOTA_TT_FR_V2: 11
-    TOYOTA_TT_RL_V2: 11
-    TOYOTA_TT_RR_V2: 11
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 10
+    TOYOTA_TIRE_T_FR: 11
+    TOYOTA_TIRE_T_RL: 11
+    TOYOTA_TIRE_T_RR: 11
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     758F110076116323333
     750F1300001
     758F12133FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 16
-    TOYOTA_TT_FR_V2: 16
-    TOYOTA_TT_RL_V2: 17
-    TOYOTA_TT_RR_V2: 17
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 16
+    TOYOTA_TIRE_T_FR: 16
+    TOYOTA_TIRE_T_RL: 17
+    TOYOTA_TIRE_T_RR: 17
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     758F110076116383839
     758F12139FF00000000
     750F1300001
 - expected_values:
-    TOYOTA_TT_FL_V2: 50
-    TOYOTA_TT_FR_V2: 49
-    TOYOTA_TT_RL_V2: 54
-    TOYOTA_TT_RR_V2: 54
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 50
+    TOYOTA_TIRE_T_FR: 49
+    TOYOTA_TIRE_T_RL: 54
+    TOYOTA_TIRE_T_RR: 54
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     758F1100761165A595E
     750F1300001
     758F1215EFF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 51
-    TOYOTA_TT_FR_V2: 37
-    TOYOTA_TT_RL_V2: 49
-    TOYOTA_TT_RR_V2: 36
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 51
+    TOYOTA_TIRE_T_FR: 37
+    TOYOTA_TIRE_T_RL: 49
+    TOYOTA_TIRE_T_RR: 36
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     758F1100761165B4D59
     750F1300001
