--- a/tests/test_cases/2019/commands/750.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2019/commands/750.2130|e=2A,ta=2A,fc=1.yaml
@@ -1,6 +1,11 @@
 command_id: 750.2130|e=2A,ta=2A,fc=1
 test_cases:
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.2069
+    TOYOTA_TIRE_P_FR: 2.18966
+    TOYOTA_TIRE_P_RL: 2.13793
+    TOYOTA_TIRE_P_RR: 2.18966
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.2069
     TOYOTA_TP_FL_V1: 2.2069
     TOYOTA_TP_FR: 2.18966
@@ -15,6 +20,11 @@ test_cases:
     7582A100761309D9C99
     7582A219CFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.2069
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 2.13793
+    TOYOTA_TIRE_P_RR: 2.18966
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.2069
     TOYOTA_TP_FL_V1: 2.2069
     TOYOTA_TP_FR: 3.88
@@ -29,6 +39,11 @@ test_cases:
     7582A100761309DFF99
     7582A219CFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.22414
+    TOYOTA_TIRE_P_FR: 2.18966
+    TOYOTA_TIRE_P_RL: 2.13793
+    TOYOTA_TIRE_P_RR: 2.25862
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.22414
     TOYOTA_TP_FL_V1: 2.22414
     TOYOTA_TP_FR: 2.18966
@@ -43,6 +58,11 @@ test_cases:
     7582A100761309E9C99
     7582A21A0FF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.22414
+    TOYOTA_TIRE_P_FR: 2.18966
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 2.2069
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.22414
     TOYOTA_TP_FL_V1: 2.22414
     TOYOTA_TP_FR: 2.18966
@@ -57,6 +77,11 @@ test_cases:
     7582A100761309E9CFF
     7582A219DFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.24138
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 2.15517
+    TOYOTA_TIRE_P_RR: 3.896
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.24138
     TOYOTA_TP_FL_V1: 2.24138
     TOYOTA_TP_FR: 3.88
@@ -71,6 +96,11 @@ test_cases:
     7582A100761309FFF9A
     7582A21FFFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 3.896
+    TOYOTA_TIRE_P_FR: 2.18966
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 3.896
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 3.88
     TOYOTA_TP_FL_V1: 3.8
     TOYOTA_TP_FR: 2.18966
