--- a/tests/test_cases/2025/commands/700.708.2210A5.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A5.yaml
@@ -1,32 +1,32 @@
 command_id: 700.708.2210A5
 test_cases:
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A5000000
     7082100000000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A5000000
     70821005F0000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A5000000
     7082100FF0000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A50000FF
     7082100A30000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A5000200
     7082100DD0000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 5
+    TOYOTA_MISFIRE_CNT: 5
   response: |-
     70810086210A5050000
     7082100CA0000000000
