--- a/tests/test_cases/2008/commands/7B0.7B8.2121.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.2121.yaml
@@ -1,10 +1,12 @@
 command_id: 7B0.7B8.2121
 test_cases:
 - expected_values:
+    TOYOTA_VEHICLE_SPEED_7B0: 0
     TOYOTA_VSS: 0
     TOYOTA_VSS_V3: 0
   response: 7B803612100
 - expected_values:
+    TOYOTA_VEHICLE_SPEED_7B0: 102.4
     TOYOTA_VSS: 108
     TOYOTA_VSS_V3: 102.4
   response: 7B803612150
