--- a/tests/test_cases/2010/command_support.yaml
+++ b/tests/test_cases/2010/command_support.yaml
@@ -2,10 +2,10 @@ model_year: 2010
 supported_commands_by_ecu:
   "7B0":
   - 7B0.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
-  - 7B0.7B8.2121:TOYOTA_VSS,TOYOTA_VSS_V3
-  - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEER_ANGLE,TOYOTA_YAW_RATE
+  - 7B0.7B8.2121:TOYOTA_VEHICLE_SPEED_7B0,TOYOTA_VSS,TOYOTA_VSS_V3
+  - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEERING_ANGLE,TOYOTA_STEER_ANGLE,TOYOTA_YAW,TOYOTA_YAW_RATE
   "7C0":
-  - 7C0.7C8.2129:TOYOTA_FLI_VOL
+  - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -65,7 +65,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.2121:TOYOTA_CC_S
   - 7E0.7E8.2151:TOYOTA_EOT,TOYOTA_PREV_TRIP_DST,TOYOTA_VVTOT
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
-  - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_TQC_LOCKUP
+  - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_V2,TOYOTA_TQC_LOCKUP
 unsupported_commands_by_ecu:
   "6F1":
   - 6F1.221700|e=40,fc=1:TOYOTA_ODO_V3
@@ -81,7 +81,7 @@ unsupported_commands_by_ecu:
   - 6F1.22DA25|e=18,fc=1:TOYOTA_EOT_V3
   - 6F1.22DA28|e=18,fc=1:TOYOTA_BRAKE_SWITCH
   - 6F1.22DA2A|e=18,fc=1:TOYOTA_TQ_CNVRT_RPM,TOYOTA_TRANS_SHAFT_RPM
-  - 6F1.22DA2E|e=18,fc=1:TOYOTA_GEAR_V2
+  - 6F1.22DA2E|e=18,fc=1:TOYOTA_GEAR_V3
   - 6F1.22DA37|e=18,fc=1:TOYOTA_TIME_D,TOYOTA_TIME_M,TOYOTA_TIME_S
   - 6F1.22DB32|e=19,fc=1:TOYOTA_AXLE_FRONT_ACTUAL_TORQUE,TOYOTA_AXLE_FRONT_SETPOINT_TORQUE
   - 6F1.22DBE4|e=29,fc=1:TOYOTA_FL_SPD,TOYOTA_FR_SPD,TOYOTA_RL_SPD,TOYOTA_RR_SPD
@@ -95,27 +95,27 @@ unsupported_commands_by_ecu:
   "701":
   - 701.220103:TOYOTA_ODO_V5
   - 701.709.221627:TOYOTA_TF1_PAN,TOYOTA_TFP_T
-  - 701.709.221628:TOYOTA_TF2_CONV
+  - 701.709.221628:TOYOTA_TF2_CONV,TOYOTA_TF_POST_CONV_T_VAR1
   "745":
   - 745.221739|fc=1:TOYOTA_HVBAT_SOC_DISPLAY
   "747":
   - 747.220103|fc=1:TOYOTA_ODO_V6
   - 747.22182E|fc=1:TOYOTA_HVBAT_C01_V,TOYOTA_HVBAT_C02_V,TOYOTA_HVBAT_C03_V,TOYOTA_HVBAT_C04_V,TOYOTA_HVBAT_C05_V,TOYOTA_HVBAT_C06_V,TOYOTA_HVBAT_C07_V,TOYOTA_HVBAT_C08_V,TOYOTA_HVBAT_C09_V,TOYOTA_HVBAT_C10_V,TOYOTA_HVBAT_C11_V,TOYOTA_HVBAT_C12_V,TOYOTA_HVBAT_C13_V,TOYOTA_HVBAT_C14_V,TOYOTA_HVBAT_C15_V,TOYOTA_HVBAT_C16_V,TOYOTA_HVBAT_C17_V,TOYOTA_HVBAT_C18_V,TOYOTA_HVBAT_C19_V,TOYOTA_HVBAT_C20_V,TOYOTA_HVBAT_C21_V,TOYOTA_HVBAT_C22_V,TOYOTA_HVBAT_C23_V,TOYOTA_HVBAT_C24_V,TOYOTA_HVBAT_C25_V,TOYOTA_HVBAT_C26_V,TOYOTA_HVBAT_C27_V,TOYOTA_HVBAT_C28_V,TOYOTA_HVBAT_C29_V,TOYOTA_HVBAT_C30_V,TOYOTA_HVBAT_C31_V,TOYOTA_HVBAT_C32_V,TOYOTA_HVBAT_C33_V,TOYOTA_HVBAT_C34_V,TOYOTA_HVBAT_C35_V,TOYOTA_HVBAT_C36_V,TOYOTA_HVBAT_C37_V,TOYOTA_HVBAT_C38_V,TOYOTA_HVBAT_C39_V,TOYOTA_HVBAT_C40_V,TOYOTA_HVBAT_C41_V,TOYOTA_HVBAT_C42_V,TOYOTA_HVBAT_C43_V,TOYOTA_HVBAT_C44_V,TOYOTA_HVBAT_C45_V,TOYOTA_HVBAT_C46_V,TOYOTA_HVBAT_C47_V,TOYOTA_HVBAT_C48_V,TOYOTA_HVBAT_C49_V,TOYOTA_HVBAT_C50_V,TOYOTA_HVBAT_C51_V,TOYOTA_HVBAT_C52_V,TOYOTA_HVBAT_C53_V,TOYOTA_HVBAT_C54_V,TOYOTA_HVBAT_C55_V,TOYOTA_HVBAT_C56_V,TOYOTA_HVBAT_C57_V,TOYOTA_HVBAT_C58_V,TOYOTA_HVBAT_C59_V,TOYOTA_HVBAT_C60_V,TOYOTA_HVBAT_C61_V,TOYOTA_HVBAT_C62_V,TOYOTA_HVBAT_C63_V,TOYOTA_HVBAT_C64_V,TOYOTA_HVBAT_C65_V,TOYOTA_HVBAT_C66_V,TOYOTA_HVBAT_C67_V,TOYOTA_HVBAT_C68_V,TOYOTA_HVBAT_C69_V,TOYOTA_HVBAT_C70_V,TOYOTA_HVBAT_C71_V,TOYOTA_HVBAT_C72_V,TOYOTA_HVBAT_C73_V,TOYOTA_HVBAT_C74_V,TOYOTA_HVBAT_C75_V,TOYOTA_HVBAT_C76_V,TOYOTA_HVBAT_C77_V,TOYOTA_HVBAT_C78_V,TOYOTA_HVBAT_C79_V,TOYOTA_HVBAT_C80_V,TOYOTA_HVBAT_C81_V,TOYOTA_HVBAT_C82_V,TOYOTA_HVBAT_C83_V,TOYOTA_HVBAT_C84_V,TOYOTA_HVBAT_C85_V,TOYOTA_HVBAT_C86_V,TOYOTA_HVBAT_C87_V,TOYOTA_HVBAT_C88_V,TOYOTA_HVBAT_C89_V,TOYOTA_HVBAT_C90_V,TOYOTA_HVBAT_C91_V,TOYOTA_HVBAT_C92_V,TOYOTA_HVBAT_C93_V,TOYOTA_HVBAT_C94_V,TOYOTA_HVBAT_C95_V,TOYOTA_HVBAT_C96_V,TOYOTA_HVBAT_CMU01_VOLT,TOYOTA_HVBAT_CMU02_VOLT
   "750":
-  - 750.2115|e=2A,fc=1:TOYOTA_TP_2_FL,TOYOTA_TP_2_FR,TOYOTA_TP_2_RL,TOYOTA_TP_2_RR,TOYOTA_TP_2_SPARE
+  - '750.2115'
   - 750.2116|e=2A,fc=1:TOYOTA_TT_FL,TOYOTA_TT_FR,TOYOTA_TT_RL,TOYOTA_TT_RR,TOYOTA_TT_SPARE
-  - 750.2130|e=2A,ta=2A,fc=1:TOYOTA_TP_FL,TOYOTA_TP_FL_V1,TOYOTA_TP_FR,TOYOTA_TP_FR_V1,TOYOTA_TP_RL,TOYOTA_TP_RL_V1,TOYOTA_TP_RR,TOYOTA_TP_RR_V1,TOYOTA_TP_SPARE,TOYOTA_TP_SPARE_V1
-  - 750.758.221004|e=2A,ta=2A,fc=1:TOYOTA_TT_1,TOYOTA_TT_2,TOYOTA_TT_3,TOYOTA_TT_4,TOYOTA_TT_5,TOYOTA_TT_FL_V2,TOYOTA_TT_FL_V3,TOYOTA_TT_FR_V2,TOYOTA_TT_FR_V3,TOYOTA_TT_RL_V2,TOYOTA_TT_RL_V3,TOYOTA_TT_RR_V2,TOYOTA_TT_RR_V3,TOYOTA_TT_SPARE_V2,TOYOTA_TT_SPARE_V3
-  - 750.758.221005|e=2A,ta=2A,fc=1:TOYOTA_TP_1,TOYOTA_TP_2,TOYOTA_TP_3,TOYOTA_TP_4,TOYOTA_TP_5,TOYOTA_TP_FL_V2,TOYOTA_TP_FL_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_SPARE_V2,TOYOTA_TP_SPARE_V2
-  - 750.758.222021|e=2A,ta=2A,fc=1:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
+  - 750.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FL_V1,TOYOTA_TP_FR,TOYOTA_TP_FR_V1,TOYOTA_TP_RL,TOYOTA_TP_RL_V1,TOYOTA_TP_RR,TOYOTA_TP_RR_V1,TOYOTA_TP_SPARE,TOYOTA_TP_SPARE_V1
+  - 750.758.221004
+  - 750.758.221005
+  - 750.758.222021
   "7B0":
   - 7B0.7B8.221006:TOYOTA_MASTER_CYL_TEMP
   "7B1":
   - 7B1.7B9.221026:TOYOTA_COUPLING_TEMP
   "7B3":
-  - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE
+  - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE_V2
   "7C0":
-  - 7C0.221022|fc=1:TOYOTA_FLV
+  - 7C0.221022
   - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
   "7D0":
   - 7D0.2162:TOYOTA_PARKING_BRAKE
