--- a/tests/test_cases/2010/commands/7C0.7C8.2129.yaml
+++ b/tests/test_cases/2010/commands/7C0.7C8.2129.yaml
@@ -2,7 +2,9 @@ command_id: 7C0.7C8.2129
 test_cases:
 - expected_values:
     TOYOTA_FLI_VOL: 0
+    TOYOTA_FUEL_INPUT: 0
   response: 7C803612900
 - expected_values:
     TOYOTA_FLI_VOL: 0.6605
+    TOYOTA_FUEL_INPUT: 5
   response: 7C803612905
