--- a/tests/test_cases/2015/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2147.yaml
@@ -3,12 +3,16 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0.02
+    TOYOTA_STEERING_ANGLE: -21
     TOYOTA_STEER_ANGLE: -21
+    TOYOTA_YAW: 0
     TOYOTA_YAW_RATE: 0
   response: 7B80761470001807F2E
 - expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0.02
+    TOYOTA_STEERING_ANGLE: -21
     TOYOTA_STEER_ANGLE: -21
+    TOYOTA_YAW: 0
     TOYOTA_YAW_RATE: 0
   response: 7B8076147FF01807F2E
