--- a/tests/test_cases/2018/commands/750.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.2130|e=2A,ta=2A,fc=1.yaml
@@ -1,6 +1,11 @@
 command_id: 750.2130|e=2A,ta=2A,fc=1
 test_cases:
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.31034
+    TOYOTA_TIRE_P_FR: 2.32759
+    TOYOTA_TIRE_P_RL: 2.2931
+    TOYOTA_TIRE_P_RR: 2.27586
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.31034
     TOYOTA_TP_FL_V1: 2.31034
     TOYOTA_TP_FR: 2.32759
@@ -16,6 +21,11 @@ test_cases:
     7502A300001
     7582A21A1FF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.31034
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 2.2931
+    TOYOTA_TIRE_P_RR: 2.27586
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.31034
     TOYOTA_TP_FL_V1: 2.31034
     TOYOTA_TP_FR: 3.88
@@ -31,6 +41,11 @@ test_cases:
     7502A300001
     7582A21A1FF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.39655
+    TOYOTA_TIRE_P_FR: 2.37931
+    TOYOTA_TIRE_P_RL: 2.36207
+    TOYOTA_TIRE_P_RR: 3.896
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.39655
     TOYOTA_TP_FL_V1: 2.39655
     TOYOTA_TP_FR: 2.37931
@@ -46,6 +61,11 @@ test_cases:
     7502A300001
     7582A21FFFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.39655
+    TOYOTA_TIRE_P_FR: 2.46552
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 2.43103
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.39655
     TOYOTA_TP_FL_V1: 2.39655
     TOYOTA_TP_FR: 2.46552
@@ -61,6 +81,11 @@ test_cases:
     7502A300001
     7582A21AAFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.46552
+    TOYOTA_TIRE_P_FR: 2.46552
+    TOYOTA_TIRE_P_RL: 2.46552
+    TOYOTA_TIRE_P_RR: 2.46552
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.46552
     TOYOTA_TP_FL_V1: 2.46552
     TOYOTA_TP_FR: 2.46552
@@ -76,6 +101,11 @@ test_cases:
     7582A21ACFF00000000
     7502A300001
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.53448
+    TOYOTA_TIRE_P_FR: 2.53448
+    TOYOTA_TIRE_P_RL: 2.5
+    TOYOTA_TIRE_P_RR: 2.5
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.53448
     TOYOTA_TP_FL_V1: 2.53448
     TOYOTA_TP_FR: 2.53448
@@ -91,6 +121,11 @@ test_cases:
     7582A21AEFF00000000
     7502A300001
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.53448
+    TOYOTA_TIRE_P_FR: 2.58621
+    TOYOTA_TIRE_P_RL: 2.68966
+    TOYOTA_TIRE_P_RR: 2.53448
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.53448
     TOYOTA_TP_FL_V1: 2.53448
     TOYOTA_TP_FR: 2.58621
@@ -105,6 +140,11 @@ test_cases:
     7582A10076130B0B3B9
     7582A21B0FF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.53448
+    TOYOTA_TIRE_P_FR: 2.60345
+    TOYOTA_TIRE_P_RL: 2.5
+    TOYOTA_TIRE_P_RR: 2.55172
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.53448
     TOYOTA_TP_FL_V1: 2.53448
     TOYOTA_TP_FR: 2.60345
@@ -120,6 +160,11 @@ test_cases:
     7582A21B1FF00000000
     7502A300001
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.53448
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 2.55172
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.53448
     TOYOTA_TP_FL_V1: 2.53448
     TOYOTA_TP_FR: 3.88
@@ -134,6 +179,11 @@ test_cases:
     7582A10076130B0FFFF
     7582A21B1FF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.53448
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 3.896
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 2.53448
     TOYOTA_TP_FL_V1: 2.53448
     TOYOTA_TP_FR: 3.88
@@ -148,6 +198,11 @@ test_cases:
     7582A10076130B0FFFF
     7582A21FFFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 3.896
+    TOYOTA_TIRE_P_FR: 2.41379
+    TOYOTA_TIRE_P_RL: 2.43103
+    TOYOTA_TIRE_P_RR: 3.896
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 3.88
     TOYOTA_TP_FL_V1: 3.8
     TOYOTA_TP_FR: 2.41379
@@ -163,6 +218,11 @@ test_cases:
     7502A300001
     7582A21FFFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 3.896
+    TOYOTA_TIRE_P_FR: 3.896
+    TOYOTA_TIRE_P_RL: 3.896
+    TOYOTA_TIRE_P_RR: 2.5
+    TOYOTA_TIRE_P_SPARE: 3.896
     TOYOTA_TP_FL: 3.88
     TOYOTA_TP_FL_V1: 3.8
     TOYOTA_TP_FR: 3.88
