--- a/tests/test_cases/2018/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2147.yaml
@@ -3,48 +3,64 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -10.3
     TOYOTA_STEER_ANGLE: -10.3
+    TOYOTA_YAW: -1
     TOYOTA_YAW_RATE: -1
   response: 7B807614700007F7F99
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -604.3
     TOYOTA_STEER_ANGLE: -604.3
+    TOYOTA_YAW: 0
     TOYOTA_YAW_RATE: 0
   response: 7B80761470000806865
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: 0
     TOYOTA_STEER_ANGLE: 0
+    TOYOTA_YAW: 0
     TOYOTA_YAW_RATE: 0
   response: 7B80761470000808000
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0.02
+    TOYOTA_STEERING_ANGLE: 51.1
     TOYOTA_STEER_ANGLE: 51.1
+    TOYOTA_YAW: 4
     TOYOTA_YAW_RATE: 4
   response: 7B807614700018481FF
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: -0.02
+    TOYOTA_STEERING_ANGLE: -7.7
     TOYOTA_STEER_ANGLE: -7.7
+    TOYOTA_YAW: 0
     TOYOTA_YAW_RATE: 0
   response: 7B807614700FF807FB3
 - expected_values:
     TOYOTA_LAT_G: 0.12
     TOYOTA_LNG_G: -0.1
+    TOYOTA_STEERING_ANGLE: 307.4
     TOYOTA_STEER_ANGLE: 307.4
+    TOYOTA_YAW: 23
     TOYOTA_YAW_RATE: 23
   response: 7B807614706FB978C02
 - expected_values:
     TOYOTA_LAT_G: -0.18
     TOYOTA_LNG_G: 0.02
+    TOYOTA_STEERING_ANGLE: -362.6
     TOYOTA_STEER_ANGLE: -362.6
+    TOYOTA_YAW: -23
     TOYOTA_YAW_RATE: -23
   response: 7B8076147F7016971D6
 - expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -377.8
     TOYOTA_STEER_ANGLE: -377.8
+    TOYOTA_YAW: -3
     TOYOTA_YAW_RATE: -3
   response: 7B8076147FF007D713E
