--- a/tests/test_cases/2019/commands/750.758.2116|t=96,e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2019/commands/750.758.2116|t=96,e=2A,ta=2A,fc=1.yaml
@@ -1,65 +1,65 @@
 command_id: 750.758.2116|t=96,e=2A,ta=2A,fc=1
 test_cases:
 - expected_values:
-    TOYOTA_TT_FL_V2: 10
-    TOYOTA_TT_FR_V2: 9
-    TOYOTA_TT_RL_V2: 10
-    TOYOTA_TT_RR_V2: 10
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 10
+    TOYOTA_TIRE_T_FR: 9
+    TOYOTA_TIRE_T_RL: 10
+    TOYOTA_TIRE_T_RR: 10
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116323132
     7582A2132FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 11
-    TOYOTA_TT_FR_V2: 12
-    TOYOTA_TT_RL_V2: 12
-    TOYOTA_TT_RR_V2: 11
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 11
+    TOYOTA_TIRE_T_FR: 12
+    TOYOTA_TIRE_T_RL: 12
+    TOYOTA_TIRE_T_RR: 11
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116333434
     7582A2133FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 11
-    TOYOTA_TT_FR_V2: 215
-    TOYOTA_TT_RL_V2: 14
-    TOYOTA_TT_RR_V2: 14
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 11
+    TOYOTA_TIRE_T_FR: 215
+    TOYOTA_TIRE_T_RL: 14
+    TOYOTA_TIRE_T_RR: 14
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A1007611633FF36
     7582A2136FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 12
-    TOYOTA_TT_FR_V2: 13
-    TOYOTA_TT_RL_V2: 14
-    TOYOTA_TT_RR_V2: 215
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 12
+    TOYOTA_TIRE_T_FR: 13
+    TOYOTA_TIRE_T_RL: 14
+    TOYOTA_TIRE_T_RR: 215
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116343536
     7582A21FFFF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 16
-    TOYOTA_TT_FR_V2: 18
-    TOYOTA_TT_RL_V2: 215
-    TOYOTA_TT_RR_V2: 17
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 16
+    TOYOTA_TIRE_T_FR: 18
+    TOYOTA_TIRE_T_RL: 215
+    TOYOTA_TIRE_T_RR: 17
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116383AFF
     7582A2139FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 23
-    TOYOTA_TT_FR_V2: 21
-    TOYOTA_TT_RL_V2: 21
-    TOYOTA_TT_RR_V2: 24
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 23
+    TOYOTA_TIRE_T_FR: 21
+    TOYOTA_TIRE_T_RL: 21
+    TOYOTA_TIRE_T_RR: 24
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A100761163F3D3D
     7582A2140FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 215
-    TOYOTA_TT_FR_V2: 12
-    TOYOTA_TT_RL_V2: 12
-    TOYOTA_TT_RR_V2: 11
-    TOYOTA_TT_SPARE_V2: 215
+    TOYOTA_TIRE_T_FL: 215
+    TOYOTA_TIRE_T_FR: 12
+    TOYOTA_TIRE_T_RL: 12
+    TOYOTA_TIRE_T_RR: 11
+    TOYOTA_TIRE_T_SPARE: 215
   response: |-
     7582A10076116FF3434
     7582A2133FF00000000
