--- a/tests/test_cases/2019/commands/7E0.7E8.2185.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2185.yaml
@@ -2,17 +2,21 @@ command_id: 7E0.7E8.2185
 test_cases:
 - expected_values:
     TOYOTA_GEAR: 1
+    TOYOTA_GEAR_V2: 1
     TOYOTA_TQC_LOCKUP: 0
   response: '7E8056185010000'
 - expected_values:
     TOYOTA_GEAR: 5
+    TOYOTA_GEAR_V2: 5
     TOYOTA_TQC_LOCKUP: 1
   response: '7E8056185058000'
 - expected_values:
     TOYOTA_GEAR: 5
+    TOYOTA_GEAR_V2: 5
     TOYOTA_TQC_LOCKUP: 1
   response: '7E8056185058018'
 - expected_values:
     TOYOTA_GEAR: 6
+    TOYOTA_GEAR_V2: 6
     TOYOTA_TQC_LOCKUP: 0
   response: '7E8056185060000'
