--- a/tests/test_cases/2021/commands/7B0.7B8.2121.yaml
+++ b/tests/test_cases/2021/commands/7B0.7B8.2121.yaml
@@ -1,10 +1,12 @@
 command_id: 7B0.7B8.2121
 test_cases:
 - expected_values:
+    TOYOTA_VEHICLE_SPEED_7B0: 0
     TOYOTA_VSS: 0
     TOYOTA_VSS_V3: 0
   response: 7B803612100
 - expected_values:
+    TOYOTA_VEHICLE_SPEED_7B0: 72.96
     TOYOTA_VSS: 76.95
     TOYOTA_VSS_V3: 72.96
   response: 7B803612139
