--- a/tests/test_cases/2021/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2021/commands/7B0.7B8.2147.yaml
@@ -3,48 +3,64 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -43
     TOYOTA_STEER_ANGLE: -43
+    TOYOTA_YAW: -3
     TOYOTA_YAW_RATE: -3
   response: 7B807614700007D7E52
 - expected_values:
     TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: -0.02
+    TOYOTA_STEERING_ANGLE: -273.4
     TOYOTA_STEER_ANGLE: -273.4
+    TOYOTA_YAW: -20
     TOYOTA_YAW_RATE: -20
   response: 7B807614700FF6C7552
 - expected_values:
     TOYOTA_LAT_G: 0.12
     TOYOTA_LNG_G: 0.04
+    TOYOTA_STEERING_ANGLE: 572.3
     TOYOTA_STEER_ANGLE: 572.3
+    TOYOTA_YAW: 15
     TOYOTA_YAW_RATE: 15
   response: 7B807614706028F965B
 - expected_values:
     TOYOTA_LAT_G: 0.26
     TOYOTA_LNG_G: -0.08
+    TOYOTA_STEERING_ANGLE: 387.8
     TOYOTA_STEER_ANGLE: 387.8
+    TOYOTA_YAW: 24
     TOYOTA_YAW_RATE: 24
   response: 7B80761470DFC988F26
 - expected_values:
     TOYOTA_LAT_G: -0.32
     TOYOTA_LNG_G: -0.16
+    TOYOTA_STEERING_ANGLE: -579.7
     TOYOTA_STEER_ANGLE: -579.7
+    TOYOTA_YAW: -30
     TOYOTA_YAW_RATE: -30
   response: 7B8076147F0F862695B
 - expected_values:
     TOYOTA_LAT_G: -0.08
     TOYOTA_LNG_G: 0.14
+    TOYOTA_STEERING_ANGLE: -179.2
     TOYOTA_STEER_ANGLE: -179.2
+    TOYOTA_YAW: -2
     TOYOTA_YAW_RATE: -2
   response: 7B8076147FC077E7900
 - expected_values:
     TOYOTA_LAT_G: -0.06
     TOYOTA_LNG_G: 0.04
+    TOYOTA_STEERING_ANGLE: -128.2
     TOYOTA_STEER_ANGLE: -128.2
+    TOYOTA_YAW: -9
     TOYOTA_YAW_RATE: -9
   response: 7B8076147FD02777AFE
 - expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -39.5
     TOYOTA_STEER_ANGLE: -39.5
+    TOYOTA_YAW: -5
     TOYOTA_YAW_RATE: -5
   response: 7B8076147FF007B7E75
