--- a/tests/test_cases/2023/commands/700.708.2210A5.yaml
+++ b/tests/test_cases/2023/commands/700.708.2210A5.yaml
@@ -1,22 +1,22 @@
 command_id: 700.708.2210A5
 test_cases:
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A5000000
     7082100000000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A5000000
     7082100FF0000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A50000E1
     7082100FF0000000000
 - expected_values:
-    TOYOTA_MISFIRE_COUNT: 0
+    TOYOTA_MISFIRE_CNT: 0
   response: |-
     70810086210A50001DA
     7082100FF0000000000
