--- a/tests/test_cases/2023/commands/700.708.221F3C.yaml
+++ b/tests/test_cases/2023/commands/700.708.221F3C.yaml
@@ -1,14 +1,14 @@
 command_id: 700.708.221F3C
 test_cases:
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 408.5
+    TOYOTA_CAT_T_11: 408.5
   response: 70805621F3C1185
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 599
+    TOYOTA_CAT_T_11: 599
   response: 70805621F3C18F6
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 600
+    TOYOTA_CAT_T_11: 600
   response: 70805621F3C1900
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 688.4
+    TOYOTA_CAT_T_11: 688.4
   response: 70805621F3C1C74
