--- a/tests/test_cases/2023/commands/7B3.7BB.221004.yaml
+++ b/tests/test_cases/2023/commands/7B3.7BB.221004.yaml
@@ -1,22 +1,22 @@
 command_id: 7B3.7BB.221004
 test_cases:
 - expected_values:
-    TOYOTA_STEERING_ANGLE: 27
+    TOYOTA_STEERING_ANGLE_V2: 27
   response: |-
     221004
     7BB06621004001201
 - expected_values:
-    TOYOTA_STEERING_ANGLE: 0
+    TOYOTA_STEERING_ANGLE_V2: 0
   response: 7BB06621004000009
 - expected_values:
-    TOYOTA_STEERING_ANGLE: 4.5
+    TOYOTA_STEERING_ANGLE_V2: 4.5
   response: 7BB0662100400030F
 - expected_values:
-    TOYOTA_STEERING_ANGLE: 7.5
+    TOYOTA_STEERING_ANGLE_V2: 7.5
   response: 7BB06621004000500
 - expected_values:
-    TOYOTA_STEERING_ANGLE: 410
+    TOYOTA_STEERING_ANGLE_V2: 410
   response: 7BB066210040FF80A
 - expected_values:
-    TOYOTA_STEERING_ANGLE: 410
+    TOYOTA_STEERING_ANGLE_V2: 410
   response: 7BB066210040FFF01
