--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -13,30 +13,30 @@ supported_commands_by_ecu:
   - 700.708.221074:TOYOTA_ENG_OIL_PRESS,TOYOTA_EOP
   - 700.708.22107B:TOYOTA_EOT_V2
   - 700.708.221087:TOYOTA_INTAKE_VVT_CHANGE_ANGLE_BANK_1
-  - 700.708.2210A5:TOYOTA_MISFIRE_COUNT
+  - 700.708.2210A5:TOYOTA_MISFIRE_CNT
   - 700.708.2210AA:TOYOTA_MISFIRE_LOAD,TOYOTA_MISFIRE_MARGIN,TOYOTA_MISFIRE_RPM
   - 700.708.2210CD:TOYOTA_LFP,TOYOTA_LFPS
-  - 700.708.221F3C:TOYOTA_CAT_T_BANK_1_SENSOR_1
-  - 700.708.221F3E:TOYOTA_CAT_T_BANK_1_SENSOR_2
+  - 700.708.221F3C:TOYOTA_CAT_T_11
+  - 700.708.221F3E:TOYOTA_CAT_T_12
   - 700.708.221F5C:TOYOTA_EOT_V2
   "701":
   - 701.220103:TOYOTA_ODO_V5
   - 701.709.221627:TOYOTA_TF1_PAN,TOYOTA_TFP_T
   "750":
-  - 750.758.221004|e=2A,ta=2A,fc=1:TOYOTA_TT_1,TOYOTA_TT_2,TOYOTA_TT_3,TOYOTA_TT_4,TOYOTA_TT_5,TOYOTA_TT_FL_V2,TOYOTA_TT_FL_V3,TOYOTA_TT_FR_V2,TOYOTA_TT_FR_V3,TOYOTA_TT_RL_V2,TOYOTA_TT_RL_V3,TOYOTA_TT_RR_V2,TOYOTA_TT_RR_V3,TOYOTA_TT_SPARE_V2,TOYOTA_TT_SPARE_V3
-  - 750.758.221005|e=2A,ta=2A,fc=1:TOYOTA_TP_1,TOYOTA_TP_2,TOYOTA_TP_3,TOYOTA_TP_4,TOYOTA_TP_5,TOYOTA_TP_FL_V2,TOYOTA_TP_FL_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_SPARE_V2,TOYOTA_TP_SPARE_V2
-  - 750.758.222021|e=2A,ta=2A,fc=1:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
+  - 750.758.221004|e=2A,fc=1:TOYOTA_TIRE_T_1,TOYOTA_TIRE_T_2,TOYOTA_TIRE_T_3,TOYOTA_TIRE_T_4,TOYOTA_TIRE_T_5
+  - 750.758.221005|e=2A,fc=1:TOYOTA_TIRE_P_1,TOYOTA_TIRE_P_2,TOYOTA_TIRE_P_3,TOYOTA_TIRE_P_4,TOYOTA_TIRE_P_5
+  - 750.758.222021|e=2A,fc=1:TOYOTA_TIRE_POS_1,TOYOTA_TIRE_POS_2,TOYOTA_TIRE_POS_3,TOYOTA_TIRE_POS_4,TOYOTA_TIRE_POS_5
   "7B0":
   - 7B0.7B8.221006:TOYOTA_MASTER_CYL_TEMP
   "7B3":
-  - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE
+  - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE_V2
   "7C0":
-  - 7C0.221022|fc=1:TOYOTA_FLV
+  - 7C0.221022:TOYOTA_FLV,TOYOTA_FUEL_LEVEL
   - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
   "7D2":
   - 7D2.221040:TOYOTA_TRANSAXLE_OIL_T
   - 7D2.22106C
-  - 7D2.221075:TOYOTA_FL_WHEEL_VSS,TOYOTA_FR_WHEEL_VSS,TOYOTA_RL_WHEEL_VSS,TOYOTA_RR_WHEEL_VSS
+  - 7D2.221075:TOYOTA_FL_WHEEL_VSS_V2,TOYOTA_FR_WHEEL_VSS_V2,TOYOTA_RL_WHEEL_VSS_V2,TOYOTA_RR_WHEEL_VSS_V2
   - 7D2.2210A1:TOYOTA_RPM,TOYOTA_TQ
   - 7D2.2210B2:TOYOTA_INVRT_COOLANT_T
   - 7D2.2215EE:TOYOTA_12V_V
@@ -260,19 +260,19 @@ unsupported_commands_by_ecu:
   - 6F1.22DA25|e=18,fc=1:TOYOTA_EOT_V3
   - 6F1.22DA28|e=18,fc=1:TOYOTA_BRAKE_SWITCH
   - 6F1.22DA2A|e=18,fc=1:TOYOTA_TQ_CNVRT_RPM,TOYOTA_TRANS_SHAFT_RPM
-  - 6F1.22DA2E|e=18,fc=1:TOYOTA_GEAR_V2
+  - 6F1.22DA2E|e=18,fc=1:TOYOTA_GEAR_V3
   - 6F1.22DA37|e=18,fc=1:TOYOTA_TIME_D,TOYOTA_TIME_M,TOYOTA_TIME_S
   - 6F1.22DB32|e=19,fc=1:TOYOTA_AXLE_FRONT_ACTUAL_TORQUE,TOYOTA_AXLE_FRONT_SETPOINT_TORQUE
   - 6F1.22DBE4|e=29,fc=1:TOYOTA_FL_SPD,TOYOTA_FR_SPD,TOYOTA_RL_SPD,TOYOTA_RR_SPD
   - 6F1.22DFE7|e=19,fc=1:TOYOTA_OIL_CHANGE_DIST,TOYOTA_VGT_CAL_ANGLE
   "700":
-  - 700.2210A7:TOYOTA_MIS_1,TOYOTA_MIS_2,TOYOTA_MIS_3,TOYOTA_MIS_4
   - 700.708.221043:TOYOTA_EWP_RPM,TOYOTA_EWP_TARGET_VSS
   - 700.708.221078:TOYOTA_IDLE_SAC_CYL_1,TOYOTA_IDLE_SAC_CYL_2,TOYOTA_IDLE_SAC_CYL_3,TOYOTA_IDLE_SAC_CYL_4
+  - 700.708.2210A7:TOYOTA_MISFIRE_CYL1,TOYOTA_MISFIRE_CYL2,TOYOTA_MISFIRE_CYL3,TOYOTA_MISFIRE_CYL4
   - 700.708.221638:TOYOTA_ATF_TEMP
   - 700.708.222848:TOYOTA_EOP_CONTROL_VALVE
   "701":
-  - 701.709.221628:TOYOTA_TF2_CONV
+  - 701.709.221628:TOYOTA_TF2_CONV,TOYOTA_TF_POST_CONV_T_VAR1
   "745":
   - 745.221739|fc=1:TOYOTA_HVBAT_SOC_DISPLAY
   - 745.74D.221739
@@ -282,21 +282,25 @@ unsupported_commands_by_ecu:
   - 747.74F.220103
   - 747.74F.22182E
   "750":
-  - 750.2115|e=2A,fc=1:TOYOTA_TP_2_FL,TOYOTA_TP_2_FR,TOYOTA_TP_2_RL,TOYOTA_TP_2_RR,TOYOTA_TP_2_SPARE
+  - '750.2115'
   - '750.2116'
   - 750.2116|e=2A,fc=1:TOYOTA_TT_FL,TOYOTA_TT_FR,TOYOTA_TT_RL,TOYOTA_TT_RR,TOYOTA_TT_SPARE
-  - 750.2130|e=2A,ta=2A,fc=1:TOYOTA_TP_FL,TOYOTA_TP_FL_V1,TOYOTA_TP_FR,TOYOTA_TP_FR_V1,TOYOTA_TP_RL,TOYOTA_TP_RL_V1,TOYOTA_TP_RR,TOYOTA_TP_RR_V1,TOYOTA_TP_SPARE,TOYOTA_TP_SPARE_V1
+  - 750.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FL_V1,TOYOTA_TP_FR,TOYOTA_TP_FR_V1,TOYOTA_TP_RL,TOYOTA_TP_RL_V1,TOYOTA_TP_RR,TOYOTA_TP_RR_V1,TOYOTA_TP_SPARE,TOYOTA_TP_SPARE_V1
   - 750.758.2115
-  - 750.758.2116|t=96,e=2A,ta=2A,fc=1:TOYOTA_TT_FL_V2,TOYOTA_TT_FR_V2,TOYOTA_TT_RL_V2,TOYOTA_TT_RR_V2,TOYOTA_TT_SPARE_V2
+  - 750.758.2115|e=2A,fc=1:TOYOTA_1_SET_2,TOYOTA_2_SET_2,TOYOTA_3_SET_2,TOYOTA_4_SET_2,TOYOTA_5_SET_2,TOYOTA_TP_2_FL,TOYOTA_TP_2_FR,TOYOTA_TP_2_RL,TOYOTA_TP_2_RR,TOYOTA_TP_2_SPARE
+  - 750.758.2116|t=96,e=2A,ta=2A,fc=1:TOYOTA_TIRE_T_FL,TOYOTA_TIRE_T_FR,TOYOTA_TIRE_T_RL,TOYOTA_TIRE_T_RR,TOYOTA_TIRE_T_SPARE
   - 750.758.2130
+  - 750.758.221004
+  - 750.758.221005
+  - 750.758.222021
   "7B0":
   - 7B0.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
-  - 7B0.7B8.2121:TOYOTA_VSS,TOYOTA_VSS_V3
-  - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEER_ANGLE,TOYOTA_YAW_RATE
+  - 7B0.7B8.2121:TOYOTA_VEHICLE_SPEED_7B0,TOYOTA_VSS,TOYOTA_VSS_V3
+  - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEERING_ANGLE,TOYOTA_STEER_ANGLE,TOYOTA_YAW,TOYOTA_YAW_RATE
   "7B1":
   - 7B1.7B9.221026:TOYOTA_COUPLING_TEMP
   "7C0":
-  - 7C0.7C8.2129:TOYOTA_FLI_VOL
+  - 7C0.7C8.2129:TOYOTA_FLI_VOL,TOYOTA_FUEL_INPUT
   "7D0":
   - 7D0.2162:TOYOTA_PARKING_BRAKE
   "7D2":
@@ -369,7 +373,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2128:TOYOTA_ODO
   - 7E0.7E8.2151:TOYOTA_EOT,TOYOTA_PREV_TRIP_DST,TOYOTA_VVTOT
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
-  - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_TQC_LOCKUP
+  - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_V2,TOYOTA_TQC_LOCKUP
   "7E1":
   - 7E1.7E9.0101
   - 7E1.7E9.0104
