--- a/tests/test_cases/2024/commands/700.708.221F3E.yaml
+++ b/tests/test_cases/2024/commands/700.708.221F3E.yaml
@@ -1,14 +1,14 @@
 command_id: 700.708.221F3E
 test_cases:
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 22.5
+    TOYOTA_CAT_T_12: 22.5
   response: 70805621F3E0271
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 62.3
+    TOYOTA_CAT_T_12: 62.3
   response: 70805621F3E03FF
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 62.4
+    TOYOTA_CAT_T_12: 62.4
   response: 70805621F3E0400
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 755.8
+    TOYOTA_CAT_T_12: 755.8
   response: 70805621F3E1F16
