--- a/tests/test_cases/2025/commands/700.708.221F3C.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F3C.yaml
@@ -1,14 +1,14 @@
 command_id: 700.708.221F3C
 test_cases:
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 26.2
+    TOYOTA_CAT_T_11: 26.2
   response: 70805621F3C0296
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 139.1
+    TOYOTA_CAT_T_11: 139.1
   response: 70805621F3C06FF
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 395.2
+    TOYOTA_CAT_T_11: 395.2
   response: 70805621F3C1100
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_1: 863.8
+    TOYOTA_CAT_T_11: 863.8
   response: 70805621F3C234E
