--- a/tests/test_cases/2025/commands/700.708.221F3E.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F3E.yaml
@@ -1,14 +1,14 @@
 command_id: 700.708.221F3E
 test_cases:
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 18.9
+    TOYOTA_CAT_T_12: 18.9
   response: 70805621F3E024D
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 36.7
+    TOYOTA_CAT_T_12: 36.7
   response: 70805621F3E02FF
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 62.4
+    TOYOTA_CAT_T_12: 62.4
   response: 70805621F3E0400
 - expected_values:
-    TOYOTA_CAT_T_BANK_1_SENSOR_2: 705.3
+    TOYOTA_CAT_T_12: 705.3
   response: 70805621F3E1D1D
