Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/750.758.221004|e=2A,fc=1.yaml
+++ b/tests/test_cases/2025/commands/750.758.221004|e=2A,fc=1.yaml
@@ -18,6 +18,8 @@ test_cases:
     TOYOTA_TIRE_T_1: 34
     TOYOTA_TIRE_T_2: 36
     TOYOTA_TIRE_T_3: 33
+    TOYOTA_TIRE_T_4: 38
+    TOYOTA_TIRE_T_5: -40
   response: |-
     7582A10086210044A4C
     7582A21494E00000000
