--- a/tests/test_cases/2019/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2106.yaml
@@ -1,6 +1,18 @@
 command_id: 7B0.7B8.2106
 test_cases:
 - expected_values:
-    TOYOTA_YAW_1: 3
-    TOYOTA_YAW_2: 1
-  response: 7B8056106838186
+    TOYOTA_YAW_1: -2
+    TOYOTA_YAW_2: -16
+  response: 7B80561067E70F1
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: 0
+  response: 7B8056106808000
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: 22
+  response: 7B8056106809626
+- expected_values:
+    TOYOTA_YAW_1: 21
+    TOYOTA_YAW_2: 9
+  response: 7B8056106958942
