--- a/tests/test_cases/2019/commands/7C4.2144.yaml
+++ b/tests/test_cases/2019/commands/7C4.2144.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 7
   response: 7CC03614407
+- expected_values:
+    TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 28
+  response: 7CC0361441C
