--- a/tests/test_cases/2019/commands/7B0.7B8.211F.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.211F.yaml
@@ -8,3 +8,7 @@ test_cases:
     TOYOTA_PARKING_BRAKE_SW: 0
     TOYOTA_STOP_LIGHT_SW: 1
   response: 7B804611F8020
+- expected_values:
+    TOYOTA_PARKING_BRAKE_SW: 0
+    TOYOTA_STOP_LIGHT_SW: 1
+  response: 7B804611FA020
