Update command data for Toyota/Tundra

--- a/tests/test_cases/2015/command_support.yaml
+++ b/tests/test_cases/2015/command_support.yaml
@@ -54,7 +54,9 @@ supported_commands_by_ecu:
   - 0152:ALCH_PCT
   - 0153:EVAP_VPA
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
+  - 7E0.010D:VSS
   - 7E0.0131:CLR_DIST
+  - 7E0.0142:VPWR
   - 7E0.7E8.2128:TOYOTA_ODO
   - 7E0.7E8.2151:TOYOTA_EOT,TOYOTA_PREV_TRIP_DST,TOYOTA_VVTOT
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
