--- a/tests/test_cases/2015/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2147.yaml
@@ -11,6 +11,22 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0.02
+    TOYOTA_STEERING_ANGLE: -28.5
+    TOYOTA_STEER_ANGLE: -28.5
+    TOYOTA_YAW: 0
+    TOYOTA_YAW_RATE: 0
+  response: 7B8076147FF01807EE3
+- expected_values:
+    TOYOTA_LAT_G: -0.02
+    TOYOTA_LNG_G: 0.02
+    TOYOTA_STEERING_ANGLE: -27
+    TOYOTA_STEER_ANGLE: -27
+    TOYOTA_YAW: 0
+    TOYOTA_YAW_RATE: 0
+  response: 7B8076147FF01807EF2
+- expected_values:
+    TOYOTA_LAT_G: -0.02
+    TOYOTA_LNG_G: 0.02
     TOYOTA_STEERING_ANGLE: -21
     TOYOTA_STEER_ANGLE: -21
     TOYOTA_YAW: 0
