--- a/tests/test_cases/2015/commands/7E0.7E8.2182.yaml
+++ b/tests/test_cases/2015/commands/7E0.7E8.2182.yaml
@@ -17,10 +17,10 @@ test_cases:
     TOYOTA_ATF_TQC_T: 48.75
   response: 7E80661825A0058C0
 - expected_values:
-    TOYOTA_ATF_PAN_T: 71.875
-    TOYOTA_ATF_TQC_T: 71.875
-  response: 7E80661826FE06FE0
+    TOYOTA_ATF_PAN_T: 79.375
+    TOYOTA_ATF_TQC_T: 78.75
+  response: 7E8066182776076C0
 - expected_values:
-    TOYOTA_ATF_PAN_T: 72.5
-    TOYOTA_ATF_TQC_T: 71.875
-  response: 7E806618270806FE0
+    TOYOTA_ATF_PAN_T: 79.375
+    TOYOTA_ATF_TQC_T: 79.375
+  response: '7E806618277607760'
