--- a/tests/test_cases/2015/commands/7E0.0131.yaml
+++ b/tests/test_cases/2015/commands/7E0.0131.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 8
   response: '7E80441310008'
+- expected_values:
+    CLR_DIST: 870
+  response: '7E80441310366'
