--- a/tests/test_cases/2008/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.2106.yaml
@@ -1,13 +1,33 @@
 command_id: 7B0.7B8.2106
 test_cases:
 - expected_values:
+    TOYOTA_YAW_1: -1
+    TOYOTA_YAW_2: -6
+  response: 7B80561067F7AD8
+- expected_values:
     TOYOTA_YAW_1: 0
     TOYOTA_YAW_2: -22
   response: 7B8056106806A9D
 - expected_values:
     TOYOTA_YAW_1: 0
     TOYOTA_YAW_2: -5
+  response: 7B8056106807B32
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: -5
+  response: 7B8056106807B41
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: -5
   response: 7B8056106807B5F
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: -5
+  response: 7B8056106807B7D
+- expected_values:
+    TOYOTA_YAW_1: 7
+    TOYOTA_YAW_2: -2
+  response: 7B8056106877EB6
 - expected_values:
     TOYOTA_YAW_1: 8
     TOYOTA_YAW_2: -26
