Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/750.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2019/commands/750.2130|e=2A,ta=2A,fc=1.yaml
@@ -78,6 +78,25 @@ test_cases:
     7582A219CFF00000000
 - expected_values:
     TOYOTA_TIRE_P_FL: 2.24138
+    TOYOTA_TIRE_P_FR: 2.24138
+    TOYOTA_TIRE_P_RL: 2.15517
+    TOYOTA_TIRE_P_RR: 2.24138
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.24138
+    TOYOTA_TP_FL_V1: 2.24138
+    TOYOTA_TP_FR: 2.24138
+    TOYOTA_TP_FR_V1: 2.24138
+    TOYOTA_TP_RL: 2.15517
+    TOYOTA_TP_RL_V1: 2.15517
+    TOYOTA_TP_RR: 2.24138
+    TOYOTA_TP_RR_V1: 2.24138
+    TOYOTA_TP_SPARE: 3.88
+    TOYOTA_TP_SPARE_V1: 3.8
+  response: |-
+    7582A100761309F9F9A
+    7582A219FFF00000000
+- expected_values:
+    TOYOTA_TIRE_P_FL: 2.24138
     TOYOTA_TIRE_P_FR: 3.896
     TOYOTA_TIRE_P_RL: 2.15517
     TOYOTA_TIRE_P_RR: 3.896
