Update command data for Toyota/Tundra

--- a/tests/test_cases/2008/command_support.yaml
+++ b/tests/test_cases/2008/command_support.yaml
@@ -61,8 +61,12 @@ supported_commands_by_ecu:
   - 014D:MIL_TIME
   - 014E:CLR_TIME
   - 0153:EVAP_VPA
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.0110:MAF
   - 7E0.011C:OBDSUP
   - 7E0.0131:CLR_DIST
+  - 7E0.0144:EQ_RAT
   - 7E0.7E8.2121:TOYOTA_CC_S
   - 7E0.7E8.2128:TOYOTA_ODO
   "7E1":
