Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2106.yaml
@@ -1,13 +1,17 @@
 command_id: 7B0.7B8.2106
 test_cases:
 - expected_values:
+    TOYOTA_YAW_1: -25
+    TOYOTA_YAW_2: -12
+  response: 7B8056106677439
+- expected_values:
     TOYOTA_YAW_1: -24
     TOYOTA_YAW_2: -21
   response: 7B8056106686BBA
 - expected_values:
-    TOYOTA_YAW_1: 0
-    TOYOTA_YAW_2: -2
-  response: 7B8056106807EF2
+    TOYOTA_YAW_1: -3
+    TOYOTA_YAW_2: -3
+  response: 7B80561067D7DF3
 - expected_values:
     TOYOTA_YAW_1: 0
     TOYOTA_YAW_2: 0
