--- a/tests/test_cases/2008/commands/7E0.0105.yaml
+++ b/tests/test_cases/2008/commands/7E0.0105.yaml
@@ -21,3 +21,9 @@ test_cases:
 - expected_values:
     ECT: 80
   response: '7E803410578'
+- expected_values:
+    ECT: 85
+  response: 7E80341057D
+- expected_values:
+    ECT: 86
+  response: 7E80341057E
