Update command data for Toyota/Tundra

--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -45,7 +45,13 @@ supported_commands_by_ecu:
   - 7D2.7DA.220103
   - 7D2.7DA.221F9A:TOYOTA_HVBAT_C,TOYOTA_HVBAT_V
   "7DF":
+  - 7DF.0104
+  - 7DF.0105
   - 7DF.0131
+  - 7DF.0134
+  - 7DF.0144
+  - 7DF.015C
+  - 7DF.01A6
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -231,6 +237,7 @@ unsupported_commands_by_ecu:
   "7D0":
   - 7D0.2162:TOYOTA_PARKING_BRAKE
   "7D2":
+  - 7D2.220103|fc=1:TOYOTA_ODO_V2_V2
   - 7D2.2210A2:TOYOTA_RM_TQ,TOYOTA_RM_TQ_REQ
   - 7D2.2210A6:TOYOTA_M_INVRT_MAX_T,TOYOTA_RM_INVRT_COOL_T
   - 7D2.221F49:TOYOTA_ACC_PEDAL_POS_1
@@ -241,16 +248,24 @@ unsupported_commands_by_ecu:
   - 7D2.7DA.22182A:TOYOTA_HVBAT_MIN_T
   - 7D2.7DA.221F0D
   "7E0":
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
   - 7E0.010D:VSS
   - 7E0.011F:RUNTM
   - 7E0.0131:CLR_DIST
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.0142:VPWR
+  - 7E0.0144:EQ_RAT
+  - 7E0.015C:EOT
+  - 7E0.01A6:ODO
   - 7E0.7E8.2121:TOYOTA_CC_S
   - 7E0.7E8.2128:TOYOTA_ODO
   - 7E0.7E8.2151:TOYOTA_EOT,TOYOTA_PREV_TRIP_DST,TOYOTA_VVTOT
   - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
   - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_V2,TOYOTA_TQC_LOCKUP
   "7E1":
+  - 7E1.7E9.0104
+  - 7E1.7E9.0105
   - 7E1.7E9.0131
   - 7E1.7E9.0142
   "7E2":
