--- a/tests/test_cases/2023/commands/700.708.221059.yaml
+++ b/tests/test_cases/2023/commands/700.708.221059.yaml
@@ -11,6 +11,11 @@ test_cases:
 - expected_values:
     TOYOTA_ACCEL_PEDAL: 0
   response: |-
+    708100A621059345D28
+    7082151057D00000000
+- expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+  response: |-
     708100A621059376129
     7082151071E00000000
 - expected_values:
