--- a/tests/test_cases/2023/commands/700.708.22106F.yaml
+++ b/tests/test_cases/2023/commands/700.708.22106F.yaml
@@ -7,5 +7,8 @@ test_cases:
     TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1: 0
   response: 7080562106F0000
 - expected_values:
+    TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1: 16.16959
+  response: 7080562106F0678
+- expected_values:
     TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1: 19.99718
   response: 7080562106F0800
