--- a/tests/test_cases/2023/commands/700.708.2210A5.yaml
+++ b/tests/test_cases/2023/commands/700.708.2210A5.yaml
@@ -13,10 +13,15 @@ test_cases:
 - expected_values:
     TOYOTA_MISFIRE_CNT: 0
   response: |-
-    70810086210A50000E1
-    7082100FF0000000000
+    70810086210A50001E6
+    7082100D90000000000
 - expected_values:
     TOYOTA_MISFIRE_CNT: 0
   response: |-
-    70810086210A50001DA
-    7082100FF0000000000
+    70810086210A5000207
+    7082100BB0000000000
+- expected_values:
+    TOYOTA_MISFIRE_CNT: 2
+  response: |-
+    70810086210A5020023
+    7082100DC0000000000
