--- a/tests/test_cases/2023/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2023/commands/700.708.22102A.yaml
@@ -27,3 +27,21 @@ test_cases:
   response: |-
     708100862102A8C8383
     708217D880000000000
+- expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 4.5098
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 5.29412
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.98039
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 1.76471
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 2.15686
+  response: |-
+    708100862102A8D8284
+    70821858B0000000000
+- expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 3.72549
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 7.64706
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.98039
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 1.76471
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 2.15686
+  response: |-
+    708100862102A938284
+    7082185890000000000
