--- a/tests/test_cases/2023/commands/700.708.221071.yaml
+++ b/tests/test_cases/2023/commands/700.708.221071.yaml
@@ -15,6 +15,9 @@ test_cases:
     TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1: 33.13009
   response: 708056210710D41
 - expected_values:
+    TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1: 35.21964
+  response: '708056210710E17'
+- expected_values:
     TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1: 36.55734
   response: 708056210710EA0
 - expected_values:
