--- a/tests/test_cases/2023/commands/7C0.7C8.221021.yaml
+++ b/tests/test_cases/2023/commands/7C0.7C8.221021.yaml
@@ -12,8 +12,17 @@ test_cases:
     TOYOTA_BATTERY_VOLTAGE: 11.9
   response: 7C80462102177
 - expected_values:
+    TOYOTA_BATTERY_VOLTAGE: 13.5
+  response: 7C80462102187
+- expected_values:
     TOYOTA_BATTERY_VOLTAGE: 13.8
   response: 7C8046210218A
 - expected_values:
     TOYOTA_BATTERY_VOLTAGE: 13.9
   response: 7C8046210218B
+- expected_values:
+    TOYOTA_BATTERY_VOLTAGE: 14
+  response: 7C8046210218C
+- expected_values:
+    TOYOTA_BATTERY_VOLTAGE: 14.1
+  response: 7C8046210218D
