Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.221002.yaml
+++ b/tests/test_cases/2025/commands/700.708.221002.yaml
@@ -1,11 +1,17 @@
 command_id: 700.708.221002
 test_cases:
 - expected_values:
+    TOYOTA_BAT_VOLTAGE: 12.90524
+  response: 70805621002294C
+- expected_values:
     TOYOTA_BAT_VOLTAGE: 14.17477
   response: 708056210022D5C
 - expected_values:
     TOYOTA_BAT_VOLTAGE: 14.24801
   response: 708056210022D98
+- expected_values:
+    TOYOTA_BAT_VOLTAGE: 14.27242
+  response: 708056210022DAC
 - expected_values:
     TOYOTA_BAT_VOLTAGE: 14.27731
   response: 708056210022DB0
