--- a/tests/test_cases/2025/commands/700.708.2215F8.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215F8.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     TOYOTA_BAT_T: 7.5
   response: 708056215F801DB
+- expected_values:
+    TOYOTA_BAT_T: 10
+  response: 708056215F801F4
