--- a/tests/test_cases/2025/commands/700.708.2215FA.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215FA.yaml
@@ -1,8 +1,14 @@
 command_id: 700.708.2215FA
 test_cases:
 - expected_values:
+    TOYOTA_ALT_DUTY_CYCLE: 22.63415
+  response: 708056215FA0E80
+- expected_values:
     TOYOTA_ALT_DUTY_CYCLE: 25.7561
   response: 708056215FA1080
 - expected_values:
     TOYOTA_ALT_DUTY_CYCLE: 28.87805
   response: 708056215FA1280
+- expected_values:
+    TOYOTA_ALT_DUTY_CYCLE: 42.14634
+  response: 708056215FA1B00
