--- a/tests/test_cases/2025/commands/700.708.221F3F.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F3F.yaml
@@ -1,8 +1,14 @@
 command_id: 700.708.221F3F
 test_cases:
 - expected_values:
+    TOYOTA_CAT_T_22: 273.02
+  response: 70805621F3F06CB
+- expected_values:
     TOYOTA_CAT_T_22: 301.28
   response: 70805621F3F0768
+- expected_values:
+    TOYOTA_CAT_T_22: 325.94
+  response: 70805621F3F07F1
 - expected_values:
     TOYOTA_CAT_T_22: 357.62
   response: 70805621F3F08A1
