--- a/tests/test_cases/2025/commands/700.708.221F6D.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F6D.yaml
@@ -17,10 +17,26 @@ test_cases:
     7082103D00000280025
     7082200000000000000
 - expected_values:
+    TOYOTA_HFP_ACTUAL: 10.34
+    TOYOTA_HFP_TARGET: 4000
+    TOYOTA_LOW_FUEL_PRESSURE: 390
+  response: |-
+    708100E621F6D1B0190
+    70821040A0000280027
+    7082200000000000000
+- expected_values:
     TOYOTA_HFP_ACTUAL: 10.28
     TOYOTA_HFP_TARGET: 5160
     TOYOTA_LOW_FUEL_PRESSURE: 370
   response: |-
     708100E621F6D1B0204
     7082104040000280025
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 17.33
+    TOYOTA_HFP_TARGET: 17180
+    TOYOTA_LOW_FUEL_PRESSURE: 400
+  response: |-
+    708100E621F6D1B06B6
+    7082106C50000280028
     7082200000000000000
