--- a/tests/test_cases/2025/commands/700.708.221018.yaml
+++ b/tests/test_cases/2025/commands/700.708.221018.yaml
@@ -7,5 +7,11 @@ test_cases:
     TOYOTA_INJECTOR_PORT: 3.41
   response: 708056210180D52
 - expected_values:
+    TOYOTA_INJECTOR_PORT: 3.66
+  response: 708056210180E4C
+- expected_values:
     TOYOTA_INJECTOR_PORT: 3.856
   response: 708056210180F10
+- expected_values:
+    TOYOTA_INJECTOR_PORT: 13.467
+  response: 70805621018349B
