--- a/tests/test_cases/2025/commands/700.708.221075.yaml
+++ b/tests/test_cases/2025/commands/700.708.221075.yaml
@@ -4,5 +4,11 @@ test_cases:
     TOYOTA_INTERCOOLER_WP_VSS: 600300.6764
   response: 708056210758C6B
 - expected_values:
+    TOYOTA_INTERCOOLER_WP_VSS: 601420.2728
+  response: 708056210758C9A
+- expected_values:
+    TOYOTA_INTERCOOLER_WP_VSS: 608923.9508
+  response: 708056210758DD5
+- expected_values:
     TOYOTA_INTERCOOLER_WP_VSS: 619762.5968
   response: 708056210758F9C
