--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -9,3 +9,12 @@ test_cases:
   response: |-
     70810086210A2908992
     70821A1A20000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.52941
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.86275
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 7.2549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A2918792
+    70821A1A20000000000
