--- a/tests/test_cases/2025/commands/700.708.2215E8.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215E8.yaml
@@ -10,3 +10,23 @@ test_cases:
     70810146215E8000028
     708211E0000214A8181
     70822000A000001316E
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 1028.2
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 852.2
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 10
+  response: |-
+    70810146215E8000028
+    708212A0000214A8181
+    70822000A0000013272
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 1028.4
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 852.2
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 10
+  response: |-
+    70810146215E8000028
+    708212C0000214A8181
+    70822000A0000013290
