--- a/tests/test_cases/2025/commands/700.708.2215EE.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215EE.yaml
@@ -1,11 +1,17 @@
 command_id: 700.708.2215EE
 test_cases:
 - expected_values:
+    TOYOTA_BAT_SENS_V: 12.92224
+  response: 708056215EE295A
+- expected_values:
     TOYOTA_BAT_SENS_V: 14.31627
   response: 708056215EE2DD0
 - expected_values:
     TOYOTA_BAT_SENS_V: 14.33092
   response: 708056215EE2DDC
+- expected_values:
+    TOYOTA_BAT_SENS_V: 14.33336
+  response: 708056215EE2DDE
 - expected_values:
     TOYOTA_BAT_SENS_V: 14.34556
   response: 708056215EE2DE8
