--- a/tests/test_cases/2025/commands/700.708.2215F7.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215F7.yaml
@@ -1,6 +1,9 @@
 command_id: 700.708.2215F7
 test_cases:
 - expected_values:
+    TOYOTA_BAT_C: 2.25891
+  response: 708056215F7825D
+- expected_values:
     TOYOTA_BAT_C: 3.01012
   response: 708056215F78322
 - expected_values:
@@ -9,3 +12,6 @@ test_cases:
 - expected_values:
     TOYOTA_BAT_C: 3.41051
   response: 708056215F7838B
+- expected_values:
+    TOYOTA_BAT_C: 8.13128
+  response: 708056215F78861
