--- a/tests/test_cases/2025/commands/700.708.221621.yaml
+++ b/tests/test_cases/2025/commands/700.708.221621.yaml
@@ -4,5 +4,8 @@ test_cases:
     TOYOTA_GEAR_V2: 1
   response: '7080462162101'
 - expected_values:
+    TOYOTA_GEAR_V2: 4
+  response: '7080462162104'
+- expected_values:
     TOYOTA_GEAR_V2: 5
   response: '7080462162105'
