--- a/tests/test_cases/2025/commands/700.708.221F3D.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F3D.yaml
@@ -1,6 +1,12 @@
 command_id: 700.708.221F3D
 test_cases:
 - expected_values:
+    TOYOTA_CAT_T_21: 855.5
+  response: 70805621F3D136F
+- expected_values:
+    TOYOTA_CAT_T_21: 858.56
+  response: 70805621F3D1380
+- expected_values:
     TOYOTA_CAT_T_21: 907.16
   response: 70805621F3D148E
 - expected_values:
