--- a/tests/test_cases/2025/commands/700.708.222820.yaml
+++ b/tests/test_cases/2025/commands/700.708.222820.yaml
@@ -4,8 +4,14 @@ test_cases:
     TOYOTA_INTERCOOLER_WATER_PUMP: 35.0042
   response: '708056228201667'
 - expected_values:
+    TOYOTA_INTERCOOLER_WATER_PUMP: 36.5301
+  response: '708056228201761'
+- expected_values:
     TOYOTA_INTERCOOLER_WATER_PUMP: 37.96445
   response: 70805622820184C
+- expected_values:
+    TOYOTA_INTERCOOLER_WATER_PUMP: 40.23499
+  response: 7080562282019C0
 - expected_values:
     TOYOTA_INTERCOOLER_WATER_PUMP: 43.16472
   response: 708056228201BA0
