Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -77,12 +77,16 @@ supported_commands_by_ecu:
   - 0158:LGSO2FT2
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
   - 7E0.010D:VSS
+  - 7E0.0110:MAF
   - 7E0.011F:RUNTM
   - 7E0.0121:MIL_DIST
   - 7E0.0130:WARM_UPS
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
+  - 7E0.0144:EQ_RAT
   - 7E0.014D:MIL_TIME
   - 7E0.014E:CLR_TIME
   - 7E0.7E8.2128:TOYOTA_ODO
