Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7B0.7B8.213D.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.213D.yaml
@@ -7,3 +7,10 @@ test_cases:
     TOYOTA_ECB_WARN: 0
     TOYOTA_SLIP_WARN: 0
   response: 7B804613D0000
+- expected_values:
+    TOYOTA_ABS_WARN: 1
+    TOYOTA_BRAKE_WARN: 1
+    TOYOTA_BUZZER: 0
+    TOYOTA_ECB_WARN: 0
+    TOYOTA_SLIP_WARN: 0
+  response: 7B804613DC008
