--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -3,6 +3,7 @@ supported_commands_by_ecu:
   "750":
   - 750.2130|e=2A,fc=1:TOYOTA_TP_FL_V3,TOYOTA_TP_FR_V3,TOYOTA_TP_RL_V3,TOYOTA_TP_RR_V3,TOYOTA_TP_SPARE_V3
   - 750.758.2116|e=2A,fc=1:TOYOTA_TT_FL,TOYOTA_TT_FL_V1,TOYOTA_TT_FR,TOYOTA_TT_FR_V1,TOYOTA_TT_RL,TOYOTA_TT_RL_V1,TOYOTA_TT_RR,TOYOTA_TT_RR_V1,TOYOTA_TT_SPARE,TOYOTA_TT_SPARE_V1
+  - 750.758.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
   "7B0":
   - 7B0.7B8.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
   - 7B0.7B8.2106:TOYOTA_YAW_1,TOYOTA_YAW_2
@@ -253,6 +254,7 @@ unsupported_commands_by_ecu:
   - 7D2.221F0D|fc=1:TOYOTA_VSS_V2
   - 7D2.221F5B|fc=1:TOYOTA_SOC
   - 7D2.7DA.220103|fc=1:TOYOTA_ODO_V2_V2
+  - 7D2.7DA.221002:TOYOTA_BAT_VOLTAGE
   - 7D2.7DA.221040:TOYOTA_TRANSAXLE_OIL_T
   - 7D2.7DA.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
   - 7D2.7DA.221075:TOYOTA_FL_WHEEL_VSS_V2,TOYOTA_FR_WHEEL_VSS_V2,TOYOTA_RL_WHEEL_VSS_V2,TOYOTA_RR_WHEEL_VSS_V2
