--- a/tests/test_cases/2008/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.2106.yaml
@@ -9,6 +9,10 @@ test_cases:
     TOYOTA_YAW_2: -6
   response: 7B80561067F7AF6
 - expected_values:
+    TOYOTA_YAW_1: -1
+    TOYOTA_YAW_2: -5
+  response: 7B80561067F7B14
+- expected_values:
     TOYOTA_YAW_1: 8
     TOYOTA_YAW_2: -26
   response: 7B8056106886656
