--- a/tests/test_cases/2008/commands/7E0.0105.yaml
+++ b/tests/test_cases/2008/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: 51
-  response: 7E80341055B
+    ECT: 49
+  response: '7E803410559'
 - expected_values:
     ECT: 90
   response: '7E803410582'
